# jp

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go
cmd/: list.go  root.go  update.go
completions/: jp.fish  op.fish
functions/: jp.fish  op.fish
pkg/projects/: list.go  load.go  project.go  projects.go  update.go
shells/fish/completions/: jp.fish
shells/fish/functions/: jp.fish
src/: main.rs  projects.rs
