[package]
name = "jp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
dirs = "4.0.0"
anyhow = "1.0.44"
log = "0.4.14"
simplelog = "0.10.2"
ngrammatic = "0.3.2"
